--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,7 +1,7 @@
 extends modules/_layout
 
 block meta
-  - var title= "title";
+  - var title= "colordrops";
   - var description= "dscription";
   - var keywords= "keyword";
 
@@ -9,20 +9,7 @@ append style
   link(rel="stylesheet" href="css/style.css")
 
 block content
-  .tool
-    ul
-      li
-        img(src="images/drop.svg" alt="twitter" width="32")
-      li
-        img(src="images/code.svg" alt="code" width="32")
-      li
-        img(src="images/image.svg" alt="image" width="32")
-      li
-        img(src="images/share.svg" alt="share" width="32")
-      li#toTop
-        img(src="images/up.svg" alt="up" width="32")
-        br
-        span.subTop Top
+  include modules/_tool
   .navWrapper
     nav
       img(src="images/logo.svg" alt="logo" id="size")
@@ -30,14 +17,7 @@ block content
     .container
       - for (var i = 1; i <= 30; i++)
         - i < 10 ? i = "0" + i : i ;
-        .box
-          .color
-            span.hex
-          .text
-            .cap Color #{i}
-            .color-footer
-              .fav: img(src="images/fav.svg" alt="favorite")
-              .set: img(src="images/set.svg" alt="setting")
+          include modules/_card
 
 block footer
   include modules/_footer
